--- a/src/index.scss
+++ b/src/index.scss
@@ -13,7 +13,8 @@ body,
 #root {
   height: 100%;
   width: 100%;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 body {
